fix:fix overscoll behaviour on mobile screen

--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,9 @@
   overscroll-behavior-y:none;
  
 }
+html{
+  scroll-behavior: smooth;
+}
 
 
 #canvas{
